# chess-backend

./: .env  .gitignore  Dockerfile  api.py  main.py  pyproject.toml
app/route/: chess.py  health.py
app/util/: board_evaluation.py  execute.py  fish.py  game_outcome.py  helper.py  move.py  schema.py  settings.py  strategy.py
app/util/fish/: get_fish.py  init_fish.py
app/util/strategy/: checkmate_express.py  chroma.py  contrast.py  dichrome.py  dodger.py  elusive.py  fortify.py  kamikaze.py  monochrome.py  predator.py  sidestep.py  snatcher.py
tests/: test_chess_moves.py  test_color.py  test_evaluate.py  test_move.py
