[tool.poetry]
name = "chess-backend"
version = "0.1.0"
description = ""
authors = ["Sax Dhiut <mail@iyxeyl.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
stockfish = "^3.28.0"
fastapi = "^0.96.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic = "^1.10.9"
chess = "^1.9.4"


[tool.poetry.group.dev.dependencies]
vulture = "^2.7"
ruff = "^0.0.272"
mypy = "^1.3.0"
black = {extras = ["d"], version = "^23.3.0"}
isort = "^5.12.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

